# squish

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  install.sh  installer.nsi  test.sh
include/: cli.hpp  image_processor.hpp  thread_pool.hpp
lib/: dct_avx2.asm  exif_orient.hpp  fast_jpeg.hpp  fast_jpeg_decode.hpp  fast_resize.hpp  fpng.cpp  gpu_dct.hpp  mmap_file.hpp
src/: cli.cpp  image_processor.cpp  main.cpp  thread_pool.cpp
